--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -30,6 +30,10 @@
         background-color: $color-white;
         color: $color-grey-dark;
     }
+    &--green{
+        background-color: $color-primary;
+        color: $color-white;
+    }
     
     &::after{
         content: "";
@@ -47,6 +51,12 @@
         &::after{
             background-color: $color-white;
             color: $color-grey-dark;            
+        }
+    }
+    &--green{
+        &::after{
+            background-color: $color-primary;
+            color: $color-white;            
         }
     }
 
