after completeing story section

--- a/sass/layouts/_grid.scss
+++ b/sass/layouts/_grid.scss
@@ -8,7 +8,7 @@
     @include clearFix;
 
     [class^="col-"]{
-       
+        // background-color: orangered;
         float: left;
         &:not(:last-child){
             margin-right: $gutter_horizontal;
