--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,6 +1,18 @@
 
 .btn{
-    
+
+    &{
+        text-transform: uppercase;
+        text-decoration: none;
+        padding: 1.5rem 4rem;
+        display: inline-block;
+        border-radius: 10rem;  
+        transition: all .2s;
+        position: relative;
+        font-size: $default-font-size; 
+        border: none;
+        cursor: pointer;
+    }    
     &:link,
     &:visited {
         text-transform: uppercase;
