after completeing the all the code for desktop

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,9 +9,12 @@
 @import 'abstract/function';
 //pages
 @import 'pages/home';
+
 //layouts
 @import 'layouts/header';
 @import "layouts/grid";
+@import 'layouts/footer';
+@import 'layouts/navigation';
 //components
 @import 'components/button';
 @import 'components/composition';
@@ -19,7 +22,8 @@
 @import 'components/card';
 @import 'components/story';
 @import 'components/bg-video';
-@import 'components/form'
+@import 'components/form';
+@import 'components/popup'
 
 
 
