--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -3,10 +3,12 @@ $color-primary-light : #55c57a;
 $color-primary-dark :  #28b485;
 $color-grey-dark : #777;
 $color-greay-dark2:#999;
+$color-greay-dark3:#333;
 $color-white:#fff;
 $color-black : #000;
 $color-grey-light-1:#f7f7f7;
 $color-grey-light-2:#eee;
+
 $color-secondary-light:#ffb900;
 $color-secondary-dark:#ff7730;
 
