--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -67,7 +67,7 @@
         display: inline-block;
         position: absolute;
         left: 0;
-        top: 0;
+        top: -0.4rem;
 
         &::after{
             content: "";
