wrapping up the project

--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -20,6 +20,7 @@ $color-tertiary-dark:#5643fa;
 
 $grid_width : 114rem;
 $gutter_vertical:8rem;
+$gutter_vertical-small:6rem;
 $gutter_horizontal:6rem;
 
 $default-font-size:1.6rem;
