--- a/sass/layouts/_grid.scss
+++ b/sass/layouts/_grid.scss
@@ -1,17 +1,36 @@
 .row{
-     width: $grid_width;
+  width: $grid_width;
    
      margin: 0 auto;     
     &:not(:last-child){
-        margin-bottom: $gutter_vertical;        
+        margin-bottom: $gutter_vertical;   
+        @include respond(tab-port)
+        {
+            margin-bottom: $gutter_vertical-small;
+        }
     }
     @include clearFix;
+
+    @include respond(tab-port)
+    {
+        width:50rem ;
+        padding: 0 3rem;
+    }
 
     [class^="col-"]{
         // background-color: orangered;
         float: left;
         &:not(:last-child){
             margin-right: $gutter_horizontal;
+            @include respond(tab-port)
+            {
+                margin-right: 0;
+                margin-bottom: $gutter_vertical-small;
+            }
+        }
+        @include respond(tab-port)
+        {
+            width: 100% !important;
         }
     }
     .col-1-of-2{
