--- a/sass/abstract/_mixins.scss
+++ b/sass/abstract/_mixins.scss
@@ -10,3 +10,40 @@
     left: 50%;
     transform:  translate(-50%,-50%);
 }
+
+/*
+
+0 - 600px : Phone
+600 - 900px :Tablet Portal
+900 - 1200px : Tablet landscape
+[1200 - 1800] is where normal style applies
+1800 + Big desktop 
+
+
+$breakpoint argument choices
+- phone
+- tab-port
+- tab-land
+- big-desktop
+
+ORDER : base + typography > general layout + grid > page layout > component
+1em=16px
+*/
+@mixin respond($breakpoint){
+    @if $breakpoint == phone{
+        @media only screen and (max-width:37.5em) { @content  };  //600
+    }
+    @if $breakpoint == tab-port{
+        @media only screen and (max-width:56.25em) { @content  };   //900
+    }
+    @if $breakpoint == tab-land{
+        @media only screen and (max-width:75em) { @content  };   //1200
+    }
+    @if $breakpoint == big-desktop{
+        @media only screen and (min-width:112.5em) { @content  };    //1800
+    }
+}
+
+
+
+
