--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,4 +1,5 @@
 @import '../abstract/variables';
+@import '../abstract/mixins';
 
 *,
 *::after,
@@ -9,7 +10,20 @@
 }
 
 html{
-    font-size: 62.5%;
+    font-size: 62.5%;   //1rem = 10px ; 10/16 == 62.5%
+    
+    
+    @include respond(tab-land){  //width <1200 ?
+        font-size: 56.25%;   // 1 rem = 9px  ; 9/16 ==56.25%
+    }
+    @include respond(tab-port){  //width < 900?
+        font-size: 50%;// 1 rem = 8px  ; 8/16 ==50%
+    }
+    @include respond(big-desktop){
+        font-size: 75%;  // 1 rem = 12px  ; 12/16 ==75%
+    }
+   
+    
 }
 
 /* adding font initial font size text color */
@@ -22,4 +36,13 @@ body{
     padding: 3rem;
     box-sizing: border-box;
     
+    @include respond(tab-port){  //width < 900?
+        padding: 0;
+    }
+    
+}
+
+::selection{
+    background-color: $color-primary;
+    color: $color-white;
 }
