--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -11,7 +11,11 @@
         font-weight: 400;
         letter-spacing: 3.5rem;
         animation: moveInLeft;
-        animation-duration: 1s;       
+        animation-duration: 1s;   
+        @include respond(phone){
+            letter-spacing: 1rem;
+            font-size: 5rem;
+        }  
     }
 
     &--sub{
@@ -21,6 +25,10 @@
         letter-spacing: 1.74rem; 
         animation: moveInRight;
         animation-duration: 1s; 
+        @include respond(phone){
+            letter-spacing: .5rem;
+            
+        }  
     }
 }
 
@@ -34,6 +42,15 @@
     color: transparent;
     letter-spacing: 0.2rem;
     transition: all .2s;
+
+    @include respond(tab-port)
+    {
+        font-size: 3rem;
+    }
+    @include respond(phone)
+    {
+        font-size: 2.5rem;
+    }
 
     &:hover{
         transform: skewY(2deg) skewX(15deg) scale(1.1);
