--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -8,7 +8,14 @@
     font-size: $default-font-size;
     transform: skewX(-12deg);
     background-color: rgba($color-white,.6);
-
+    @include respond(tab-port){
+        width: 100%;
+        padding: 4rem;
+        padding-left: 7rem;
+    }
+    @include respond(phone){
+        transform: skewX(0);
+    }
    
     &__shape{
         width: 15rem;
@@ -19,7 +26,10 @@
         clip-path: circle(50% at 50% 50%);
         transform: translateX(-3rem) skewX(12deg);
         position: relative;
-       
+
+        @include respond(phone){
+            transform: translateX(-3rem) skewX(0);
+        }       
     }  
     
     &__caption{
@@ -50,6 +60,10 @@
 
     &__text{
         transform: skewX(12deg);
+        @include respond(phone){
+            transform: skewX(0);
+        }
+       
     }
 
     &:hover &__img{
