--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -3,10 +3,20 @@
     padding: 10rem 0;
     font-size: 1.4rem;
 
+    @include respond(tab-port)
+    {
+        padding: 8rem 0;
+    }
+
     &__logo-box{
          
          text-align: center;
          margin-bottom: 8rem;
+         @include respond(tab-port)
+            {
+                margin-bottom: 6rem;
+            }
+         
     }
 
     &__logo{
@@ -17,6 +27,11 @@
         border-top: 1px solid $color-grey-dark;
         padding-top: 2rem;
         display: inline-block;
+
+        @include respond(tab-port){
+            width: 100%;
+            text-align: center;
+        }
     }
     &__list{
         list-style: none;
@@ -50,5 +65,9 @@
         padding: 2rem;
         float: right;
         display: inline-block;
+        @include respond(tab-port){
+            width: 100%;
+            float: none;
+        }
     }
 }
