--- a/css/style.css
+++ b/css/style.css
@@ -413,7 +413,8 @@ ORDER : base + typography > general layout + grid > page layout > component
   z-index: 150000;
   opacity: 0;
   width: 0;
-  transition: all .8s; }
+  transition: all .8s;
+  visibility: hidden; }
 
 .navigation__list {
   position: absolute;
@@ -449,7 +450,8 @@ ORDER : base + typography > general layout + grid > page layout > component
 
 .navigation__checkbox:checked ~ .navigation__nav {
   opacity: 1;
-  width: 100%; }
+  width: 100%;
+  visibility: visible; }
 
 .navigation__icon {
   position: relative;
